<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:padding="@dimen/_5sdp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/complete"
        android:layout_marginTop="@dimen/_10sdp"
        android:elevation="@dimen/_10sdp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/complete"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/heading"
                android:weightSum="2">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/service_details"
                    android:padding="8dp"
                    android:textSize="14sp"
                    android:textColor="@color/white"
                    android:layout_weight="1"/>

                <TextView
                    android:id="@+id/txt_orderId"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/order_id"
                    android:textColor="@color/white"
                    android:padding="8dp"
                    android:textSize="12sp"
                    android:gravity="right"
                    android:layout_weight="1"/>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:gravity="right"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_gravity="right"
                >

                <ImageView
                    android:id="@+id/img_invoice"
                    android:layout_width="100dp"
                    android:layout_marginLeft="@dimen/_20sdp"
                    android:layout_height="match_parent"
                    android:layout_marginRight="@dimen/_5sdp"
                    android:gravity="right"
                    android:layout_gravity="right"
                    android:src="@drawable/ic_invoice" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:weightSum="2">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginLeft="@dimen/_5sdp"
                    android:layout_weight="1">

                    <TextView
                        android:id="@+id/txt_serviceName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/service_details"
                        android:padding="2dp"
                        android:layout_marginLeft="5dp"
                        android:textSize="12sp"
                        android:textStyle="bold"
                        android:textColor="@color/black" />

                    <TextView
                        android:id="@+id/txt_serviceSubName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/grey"
                        android:textSize="12sp"
                        android:layout_marginLeft="8dp" />

                </LinearLayout>



            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:weightSum="2">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_date"
                    android:padding="8dp"
                    android:textSize="12sp"
                    android:textColor="@color/black"
                    android:layout_weight="1"/>

                <TextView
                    android:id="@+id/txt_date"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/date"
                    android:textSize="12sp"
                    android:textColor="@color/black"
                    android:padding="8dp"
                    android:gravity="right"
                    android:layout_weight="1"/>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:background="@color/grey"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:weightSum="2">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_time"
                    android:padding="8dp"
                    android:textSize="12sp"
                    android:textColor="@color/black"
                    android:layout_weight="1"/>

                <TextView
                    android:id="@+id/txt_time"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/time"
                    android:textSize="12sp"
                    android:textColor="@color/black"
                    android:padding="8dp"
                    android:gravity="right"
                    android:layout_weight="1"/>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:background="@color/grey"/>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:weightSum="3">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/total_item"
                    android:padding="8dp"
                    android:textSize="12sp"
                    android:textColor="@color/black"
                    android:layout_weight="1"/>

                <TextView
                    android:id="@+id/txt_totalItemCount"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:textColor="@color/black"
                    android:padding="8dp"
                    android:gravity="center"
                    android:layout_weight="1"/>

                <TextView
                    android:id="@+id/txt_totalMoney"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/total_money"
                    android:textSize="12sp"
                    android:textColor="@color/black"
                    android:padding="8dp"
                    android:gravity="right"
                    android:layout_weight="1"/>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:background="@color/grey"/>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:weightSum="3">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/discount"
                    android:textSize="12sp"
                    android:padding="8dp"
                    android:textColor="@color/black"
                    android:layout_weight="1"/>

                <TextView
                    android:id="@+id/txt_appliedCouponName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:textColor="@color/black"
                    android:padding="8dp"
                    android:gravity="center"
                    android:layout_weight="1"/>

                <TextView
                    android:id="@+id/txt_discountMoney"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/discount_money"
                    android:textSize="12sp"
                    android:textColor="@color/black"
                    android:padding="8dp"
                    android:gravity="right"
                    android:layout_weight="1"/>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:background="@color/grey"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="2">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="8dp"
                    android:text="Payment mode"
                    android:textColor="@color/black"
                    android:textSize="12sp"/>

                <TextView
                    android:id="@+id/txt_paymentmodeStatus"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:padding="8dp"
                    android:textColor="@color/black"
                    android:textSize="12sp"/>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:background="@color/grey"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:weightSum="2">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/total_amount"
                    android:padding="8dp"
                    android:textSize="12sp"
                    android:textColor="@color/black"
                    android:layout_weight="1"/>

                <TextView
                    android:id="@+id/txt_TotalAmount"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/total_money"
                    android:textColor="@color/black"
                    android:padding="8dp"
                    android:textSize="12sp"
                    android:gravity="right"
                    android:layout_weight="1"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/add_onServicesLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/complete"
            android:visibility="gone"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:text="ADD ON SERVICE"
                    android:textColor="@color/blue"
                    android:textStyle="bold"
                    android:textSize="14sp"/>

            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/add_newServiceRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:listitem="@layout/add_new_services_list">

            </androidx.recyclerview.widget.RecyclerView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_5sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_5sdp"
                android:weightSum="3">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="8dp"
                    android:text="@string/discount"
                    android:textColor="@color/black"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/txt_service_appliedCouponName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="8dp"
                    android:textColor="@color/black"
                    android:textSize="12sp"/>

                <TextView
                    android:id="@+id/txt_service_discountMoney"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:padding="8dp"
                    android:textColor="@color/black"
                    android:textSize="12sp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_5sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_5sdp"
                android:weightSum="3">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="8dp"
                    android:text="TOTAL"
                    android:textColor="@color/black"
                    android:textSize="12sp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="8dp"
                    android:textColor="@color/black"
                    android:textSize="12sp"/>

                <TextView
                    android:id="@+id/txt_addnewServicetotalAMount"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:padding="8dp"
                    android:textColor="@color/black"
                    android:textSize="12sp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_5sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_5sdp"
                android:weightSum="2">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="8dp"
                    android:text="Payment mode"
                    android:textColor="@color/black"
                    android:textSize="12sp"/>

                <TextView
                    android:id="@+id/txt_paymentmode"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:padding="8dp"
                    android:textColor="@color/black"
                    android:textSize="12sp"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="5dp">

            <TextView
                android:id="@+id/txt_addressType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="2dp"
                android:textSize="12sp"
                android:gravity="center"
                android:textStyle="bold"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/txt_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="10sp"
                android:layout_marginBottom="40dp"
                android:gravity="center"
                android:textColor="@color/black" />

        </LinearLayout>

    </LinearLayout>



</LinearLayout>